[package]
name = "line-parser"
version = "0.1.0"
authors = ["fuyutarow <fuyutarow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.9"
toml = "0.5.5"
serde_derive = "1.0.102"
serde = "1.0.102"
